Har skapat animationer för  diagram, mixin funktion samt eventlyssnare för mörkt/ljust tema

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,6 +1,7 @@
 // Variabler
 $header-footer-background: #7F8CAA;
 $header-footer-color: #EAEFEF;
+$main-background: lightgrey;
 $main-color: #333446;
 $hover-color: #B8CFCE;
 $font-family: Georgia, 'Times New Roman', Times, serif;
