--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -74,6 +74,9 @@ main {
             --color-2: #7F8CAA;
         }
     }
+    #error-message {
+        display: none;
+    }
     #results {
         
         display: grid;
